--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@
 	padding:20px 30px;
 }
 .scroll{
-	background-image:url("https://github.com/mansi35/EngagedForChange/blob/master/download.jpg");
+	background-image:url("download.jpg");
 	background-size:cover;
 }
