--- a/style.css
+++ b/style.css
@@ -59,11 +59,11 @@
 	padding:20px 30px;
 	font-family:sans-serif;
 	margin:10px 10px;
-	align-content:center; 
+	align-text:center; 
 
 }
 .scroll p{
-	color:blue;
+	color:red;
 	font-size:20px;
 	font-family:serif;
 	padding:20px 30px;
