--- a/style.css
+++ b/style.css
@@ -127,3 +127,19 @@ h1::after{
 .img-box ul, .img-box ul li{
 	transition: 0.5s;
 }
+/* about us*/
+.scroll h2{
+	color:#3b5998;
+	font-size:45px;
+	padding:20px 30px;
+	font-family: "Lucida Grande";
+	margin:10px 10px;
+	text-align:center; 
+
+}
+.scroll p{
+	color:red;
+	font-size:20px;
+	font-family:serif;
+	padding:20px 30px;
+}
