--- a/style.css
+++ b/style.css
@@ -234,3 +234,37 @@ h1::after{
 .img-box ul, .img-box ul li{
 	transition: 0.5s;
 }
+
+/*---------Contact us-----------*/
+.contact{
+  background: #efefef;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  color: #777; 
+}
+
+.contact-form{
+  padding: 15px;
+}
+
+
+.form-control{
+  border-radius: 0;
+  border: none;
+}
+
+::placeholder{
+  color: #777;
+}
+
+.follow{
+  background: #fff;
+  padding: 10px;
+  margin: 15px
+}
+
+.contact-info .fa{
+  margin: 10px;
+  color: #007bff;
+  font-weight: bold;
+}
