--- a/d.css
+++ b/d.css
@@ -15,7 +15,7 @@ a {
 }
 .top-wrapper {
   padding: 180px 20px 100px 0;
-  background-image: url(g.jpg);
+  background-image: url(img/g.jpg);
   background-size: cover;
 }
 
