--- a/style.css
+++ b/style.css
@@ -48,13 +48,14 @@
 	height: auto;
 }
 .carousel-caption{
-	top: 50%;
+	top: 25%;
 	transform: translateY(-50%);
+	transform: translateX(-50%);
 	bottom: initial!important;
 }
 .carousel-caption h5{
 	color: #fff;
-	font-size: :42px;
+	font-size:58px;
 }
 
 /* about us*/
