--- a/style.css
+++ b/style.css
@@ -1,99 +1,132 @@
-*
-{
-	margin: 0;
-	padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
+
+
 /*-------Navigation-------*/
-#nav-bar{
-	position: sticky;
-	top: 0;
-	z-index: 10;
-}
-.navbar-brand img{
-	height: 40px;
-	padding-left: 30px;
+
+#nav-bar {
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
-.navbar-nav li{
-	padding: 0 10px;
+.navbar-brand img {
+    height: 40px;
+    padding-left: 30px;
 }
 
-.navbar-nav li a{
-	float: right;
-	text-align: left;
+.navbar-nav li {
+    padding: 0 10px;
 }
 
-#nav-bar ul li a:hover{
-	color: #007bff!important;
+.navbar-nav li a {
+    float: right;
+    text-align: left;
 }
 
-.navbar{
-	background: #fff;
+#nav-bar ul li a:hover {
+    color: #007bff!important;
 }
 
-.navbar-toggler{
-	border:none!important;
+.navbar {
+    background: #fff;
 }
 
-.nav-link{
-	color: #555!important;
-	font-weight: 600;
-	font-size: 16px;
+.navbar-toggler {
+    border: none!important;
+}
+
+.nav-link {
+    color: #555!important;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 
 /*----Slider----*/
-#slider{
-	width: 100%;
-	height: auto;
-}
-.carousel-caption{
-	top: 25%;
-	transform: translateY(-50%);
-	transform: translateX(-45%)!important;
-	bottom: initial!important;
-}
-.carousel-caption h5{
-	color: #fff;
-	font-size:50px;
+
+#slider {
+    width: 100%;
+    height: auto;
 }
 
+.carousel-caption {
+    top: 25%;
+    transform: translateY(-50%);
+    transform: translateX(-45%)!important;
+    bottom: initial!important;
+}
+
+.carousel-caption h5 {
+    color: #fff;
+    font-size: 50px;
+}
+
+
 /* about us*/
-#more {display: none;}
-#about
-{
-	padding-top:50px;
-	padding-bottom: 50px;
-	color:#555;
+
+#more {
+    display: none;
 }
-#about .btn{
-	margin-top: 20px;
-	margin-bottom: 30px;
+
+#about {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: #555;
 }
-.about-content{
-	padding-top:20px;
+
+#about .btn {
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
+
+.about-content {
+    padding-top: 20px;
+}
+
+
 /*--our services--*/
-  .box{
-    width: 1200px;
+
+
+/* body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #212121;
+    font-family: sans-serif;
+} */
+
+.box {
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    display: flex;
+    /* min-height: 100vh; */
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 5px;
+    grid-gap: 15px;
     margin: 0 auto;
-  }
-  .card{
+}
+
+.card {
     position: relative;
-    width: 250px;
-    height: 300px;
+    width: 80%;
+    height: 350px;
     background: #fff;
     margin: 0 auto;
     border-radius: 4px;
-    box-shadow:0 2px 10px rgba(0,0,0,.2);
-  }
-  .card:before,
-  .card:after
-  {
-    content:"";
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
+}
+
+.card:before,
+.card:after {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -102,171 +135,198 @@
     border-radius: 4px;
     background: #fff;
     transition: 0.5s;
-    z-index:-1;
-  }
-  .card:hover:before{
-  transform: rotate(20deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .card:hover:after{
-  transform: rotate(10deg);
-  box-shadow: 0 2px 20px rgba(0,0,0,.2);
-  }
-  .card .imgBx{
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  bottom: 10px;
-  right: 10px;
-  background: #222;
-  transition: 0.5s;
-  z-index: 1;
-  }
-  
-  .card:hover .imgBx
-  {
+    z-index: -1;
+}
+
+.card:hover:before {
+    transform: rotate(10deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
+
+.card:hover:after {
+    transform: rotate(5deg);
+    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
+
+.card .imgBx {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    bottom: 10px;
+    right: 10px;
+    background: #222;
+    transition: 0.5s;
+    z-index: 1;
+}
+
+.card:hover .imgBx {
     bottom: 80px;
-  }
+}
 
-  .card .imgBx img{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
+.card .imgBx img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
-  .card .details{
-      position: absolute;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      height: 60px;
-      text-align: center;
-  }
+.card .details {
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    height: 60px;
+    text-align: center;
+}
 
-  .card .details h2{
-   margin: 0;
-   padding: 0;
-   font-weight: 600;
-   font-size: 20px;
-   color: #777;
-   text-transform: uppercase;
-  } 
+.card .details h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 20px;
+    color: #777;
+    text-transform: uppercase;
+}
 
-  .card .details h2 span{
-  font-weight: 500;
-  font-size: 16px;
-  color: #f38695;
-  display: block;
-  margin-top: 5px;
-   } 
+.card .details h2 span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #f38695;
+    display: block;
+    margin-top: 5px;
+}
+
 
 /*---Team Members----*/
-#team{
-	padding-top: 50px;
-	padding-bottom: 50px;
-	color:#555;
-}
-h1{
-	text-align: center;
-	color: #555;
-	padding-bottom: 10px;
-}
-h1::after{
-	content: '';
-	background:#007bff;
-	display:block;
-	height: 3px;
-	width:170px;
-	margin: 20px auto 5px;
-}
-.profile-pic{
-	margin-top: 25px;
-}
-.profile-pic .img-box{
-	opacity: 1;
-	display: block;
-	position: relative;
-}
-.profile-pic .img-box img{
-	filter: grayscale(1);
-}
-.profile-pic .img-box img:hover{
-	filter: grayscale(0);
-	cursor:pointer;
-}
-.profile-pic h2{
-	font-size: 22px;
-	font-weight: bold;
-	margin-top:15px;
-	color:#007bff !important;
-}
-.profile-pic h3{
-	font-size: 15px;
-	font-weight: bold;
-	margin-top:15px;
-}
-#team .fa{
-	height: 25px;
-	width: 25px;
-	color: #007bff !important;
-	background: #fff;
-	padding: 4px;
-	border-radius: 50%;
-}
-.img-box ul{
-	padding: 15px 0;
-	position :absolute;
-	z-index: 2;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	opacity: 0;
-}
-.img-box ul li{
-	padding: 5px;
-	display: inline-block;
-}
-.img-box:hover ul{
-	opacity: 1;
-}
-.img-box ul, .img-box ul li{
-	transition: 0.5s;
+
+#team {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    color: #555;
 }
 
+h1 {
+    text-align: center;
+    color: #555;
+    padding-bottom: 10px;
+}
+
+h1::after {
+    content: '';
+    background: #007bff;
+    display: block;
+    height: 3px;
+    width: 170px;
+    margin: 20px auto 5px;
+}
+
+.profile-pic {
+    margin-top: 25px;
+}
+
+.profile-pic .img-box {
+    opacity: 1;
+    display: block;
+    position: relative;
+}
+
+.profile-pic .img-box img {
+    filter: grayscale(1);
+}
+
+.profile-pic .img-box img:hover {
+    filter: grayscale(0);
+    cursor: pointer;
+}
+
+.profile-pic h2 {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 15px;
+    color: #007bff !important;
+}
+
+.profile-pic h3 {
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+#team .fa {
+    height: 25px;
+    width: 25px;
+    color: #007bff !important;
+    background: #fff;
+    padding: 4px;
+    border-radius: 50%;
+}
+
+.img-box ul {
+    padding: 15px 0;
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+}
+
+.img-box ul li {
+    padding: 5px;
+    display: inline-block;
+}
+
+.img-box:hover ul {
+    opacity: 1;
+}
+
+.img-box ul,
+.img-box ul li {
+    transition: 0.5s;
+}
+
+
 /*---------Contact us-----------*/
-.back{
-	background-color: #000000 !important;
+
+.back {
+    background-color: #000000 !important;
 }
-.back h1{
-	color: #fff;
+
+.back h1 {
+    color: #fff;
 }
-.contact{
-  background: #efefef;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  color: #777; 
+
+.contact {
+    background: #efefef;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color: #777;
 }
-.contact-form{
-  padding: 15px;
+
+.contact-form {
+    padding: 15px;
 }
-.form-control{
-  border-radius: 0;
-  border: none;
+
+.form-control {
+    border-radius: 0;
+    border: none;
 }
-::placeholder{
-  color: #777;
+
+::placeholder {
+    color: #777;
 }
-.follow{
-  background: #000000;
-  padding: 10px;
-  margin: 15px;
-  color: #fff;
+
+.follow {
+    background: #000000;
+    padding: 10px;
+    margin: 15px;
+    color: #fff;
 }
-.contact-info .fa{
-  margin: 10px;
-  color: #007bff;
-  font-weight: bold;
+
+.contact-info .fa {
+    margin: 10px;
+    color: #007bff;
+    font-weight: bold;
 }
