--- a/style1.css
+++ b/style1.css
@@ -1,432 +1,434 @@
 .font h3 {
     display: block;
     font-size: 1.17em;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
+    /* margin-block-start: 1em;
+    margin-block-end: 1em; */
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
     color: #000;
 }
+
 p {
-  line-height: 1.5;
+    line-height: 1.5;
 }
 
 main {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 a {
-  text-decoration: none;
-  color: black;
+    text-decoration: none;
+    color: black;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
+
 
 /* Inputs */
 
 input,
 textarea {
-  height: 32px;
-  padding: 0 16px;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 20px;
-  border: none;
-  box-shadow: inset 8px 3px 18px -4px rgba(0, 0, 0, 0.4);
+    height: 32px;
+    padding: 0 16px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 20px;
+    border: none;
+    box-shadow: inset 8px 3px 18px -4px rgba(0, 0, 0, 0.4);
 }
 
 input:focus,
 textarea:focus {
-  outline: none;
+    outline: none;
 }
+
 
 /* Banner */
 
 #banner {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background: rgba(0, 0, 0, 0.2) url("img/3.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  background-blend-mode: overlay;
-  color: white;
+    height: 100vh;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: rgba(0, 0, 0, 0.2) url("img/3.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-blend-mode: overlay;
+    color: white;
 }
 
 #banner h3 {
-  background: black;
-  border-radius: 8px;
-  padding: 0 24px;
-  font-size: 24px;
+    background: black;
+    border-radius: 8px;
+    /* padding: 0 24px; */
+    font-size: 24px;
 }
 
-#nav-bar{
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-.navbar-brand img{
-  height: 40px;
-  padding-left: 30px;
+#nav-bar {
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
-.navbar-nav li{
-  padding: 0 10px;
+.navbar-brand img {
+    height: 40px;
+    /* padding-left: 30px; */
 }
 
-.navbar-nav li a{
-  float: right;
-  text-align: left;
+.navbar-nav li {
+    padding: 0 10px;
 }
 
-#nav-bar ul li a:hover{
-  color: #007bff!important;
+.navbar-nav li a {
+    float: right;
+    text-align: left;
 }
 
-.navbar{
-  background: #fff;
+#nav-bar ul li a:hover {
+    color: #007bff!important;
 }
 
-.navbar-toggler{
-  border:none!important;
+.navbar {
+    background: #fff;
 }
 
-.nav-link{
-  color: #555!important;
-  font-weight: 600;
-  font-size: 16px;
+.navbar-toggler {
+    border: none!important;
 }
+
+.nav-link {
+    color: #555!important;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+
 /* Sections */
 
 section {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .section-heading {
-  font-size: 32px;
-  font-family: "Roboto Condensed", sans-serif;
-  border-left: 3px solid black;
-  border-right: 3px solid black;
-  transition: all 0.4s;
-  display: inline-block;
-  padding: 4px 32px;
+    font-size: 32px;
+    font-family: "Roboto Condensed", sans-serif;
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    transition: all 0.4s;
+    display: inline-block;
+    padding: 4px 32px;
 }
 
 .section-heading:hover {
-  padding: 4px 48px;
-  background: red;
+    padding: 4px 48px;
+    background: red;
 }
+
 
 /* Section Source */
 
 #section-source p {
-  padding: 8px;
-  text-align: center;
+    padding: 8px;
+    text-align: center;
 }
 
 #section-source a {
-  margin: 8px;
-  text-align: center;
+    margin: 8px;
+    text-align: center;
 }
+
 
 /* Card */
 
 .cards-image {
-  transition: 0.4s;
-  width: 515px;
+    transition: 0.4s;
+    width: 100%;
 }
 
 .size {
-  transition: 0.4s;
-  width: 750px!important;
+    transition: 0.4s;
+    width: 750px!important;
 }
+
 .cards-image:hover {
-  box-shadow: 0 10px 6px -6px #777;
+    box-shadow: 0 10px 6px -6px #777;
 }
 
 .cards .cards-description {
-  padding: 16px 16px;
-  width:515px;
+    padding: 16px 16px;
+    width: 100%;
 }
 
-.description{
-  width: 700px!important;
+.description {
+    width: 700px!important;
 }
 
-.cards-meta-blogpost{
-  color:#333;
-  font-size:14px;
-  padding: 16px;
-  font-family:'Roboto Slab', serif;
+.cards-meta-blogpost {
+    color: #333;
+    font-size: 14px;
+    padding: 16px;
+    font-family: 'Roboto Slab', serif;
 }
 
-.cards-meta-blogpost a{
-  color:#333;
+.cards-meta-blogpost a {
+    color: #333;
 }
+
 
 /* Button Read more */
 
 .btn-readmore {
-  padding: 8px 24px;
-  border: 3px solid black;
-  transition: 0.4s;
-  display: inline-block;
-  margin-bottom: 24px;
-  margin-left: 24px;
-  font-weight: bold;
-  cursor: pointer;
-  background: white;
+    padding: 8px 24px;
+    border: 3px solid black;
+    transition: 0.4s;
+    display: inline-block;
+    margin-bottom: 24px;
+    margin-left: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    background: white;
 }
 
 .btn-readmore:hover {
-  background: red;
-  text-decoration: none;
-  padding: 8px 64px 8px 24px;
-  color: white;
+    background: red;
+    text-decoration: none;
+    padding: 8px 64px 8px 24px;
+    color: white;
 }
+
 
 /* Footer */
 
 footer {
-  background: black;
-  padding: 8px;
-  color: #eee;
-  display: flex;
+    background: black;
+    padding: 8px;
+    color: #eee;
+    display: flex;
 }
 
 footer a {
-  color: white;
+    color: white;
 }
 
 footer #left-footer {
-  flex: 1;
-  border-right: 1px solid red;
-  padding-left: 32px;
+    flex: 1;
+    border-right: 1px solid red;
+    padding-left: 32px;
 }
 
 footer #left-footer ul {
-  padding: 0;
-  list-style: none;
-  line-height: 1.5;
+    padding: 0;
+    list-style: none;
+    line-height: 1.5;
 }
 
 footer #right-footer {
-  flex: 2;
-  padding: 8px;
-  text-align: center;
+    flex: 2;
+    padding: 8px;
+    text-align: center;
 }
 
 footer #social-media-footer a .fa-facebook,
 footer #social-media-footer a .fa-youtube,
 footer #social-media-footer a .fa-github {
-  color: white;
-  transition: 0.4s;
+    color: white;
+    transition: 0.4s;
 }
 
 footer #social-media-footer ul {
-  display: flex;
-  list-style: none;
-  justify-content: center;
-  padding: 0;
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    padding: 0;
 }
 
 footer #social-media-footer ul li {
-  font-size: 48px;
-  padding: 16px;
-  transition: 0.4s;
+    font-size: 48px;
+    padding: 16px;
+    transition: 0.4s;
 }
 
 footer #social-media-footer ul li:hover a .fa-youtube {
-  color: red;
+    color: red;
 }
 
 footer #social-media-footer ul li:hover a .fa-facebook {
-  color: #3b5998;
+    color: #3b5998;
 }
 
 footer #social-media-footer ul li:hover a .fa-github {
-  color: #bbb;
+    color: #bbb;
 }
+
 
 /* Blog List page */
 
-.page-heading{
-  font-size:32px;
-  font-family:'Roboto Condensed', sans-serif!important;
-  border-left:3px solid black;
-  border-right:3px solid black;
-  transition: all 0.4s;
-  display:inline-block;
-  padding:4px 32px;
-  margin-top: 25px;
+.page-heading {
+    font-size: 32px;
+    font-family: 'Roboto Condensed', sans-serif!important;
+    border-left: 3px solid black;
+    border-right: 3px solid black;
+    transition: all 0.4s;
+    display: inline-block;
+    padding: 4px 32px;
+    margin-top: 25px;
 }
 
-.page-heading:hover{
-  padding:4px 48px;
-  background:red;
+.page-heading:hover {
+    padding: 4px 48px;
+    background: red;
 }
 
-.cards-meta{
-  color:#333;
-  font-size: 14px;
-  padding-left:8px;
-  font-family:'Roboto Slab', serif;
+.cards-meta {
+    color: #333;
+    font-size: 14px;
+    padding-left: 8px;
+    font-family: 'Roboto Slab', serif;
 }
 
-.cards-meta a{
-  color:#333;
+.cards-meta a {
+    color: #333;
 }
+
 
 /* Single Blogpost */
 
-#post-container{
-  display: flex;
+#post-container {
+    display: flex;
 }
 
-#blogpost{
-  display: flex;
-  flex-direction:column;
-  width:70%;
-  border-left:1px solid #999;
+#blogpost {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    border-left: 1px solid #999;
 }
 
-#blogpost .cards{
-  width:100%;
+#blogpost .cards {
+    width: 100%;
 }
 
-#blogpost .cards-image:hover{
-  box-shadow: none;
+#blogpost .cards-image:hover {
+    box-shadow: none;
 }
+
 
 /* Sidebar */
 
-#sidebar{
-  background:#333;
-  flex:1;
-  padding: 8px 16px;
-  color:white;
-  box-shadow: inset 27px 0 51px -18px rgba(0,0,0,0.75);
+#sidebar {
+    background: #333;
+    flex: 1;
+    padding: 8px 16px;
+    color: white;
+    box-shadow: inset 27px 0 51px -18px rgba(0, 0, 0, 0.75);
 }
-#sidebar h4{
-    color:white;
+
+#sidebar h4 {
+    color: white;
 }
-#sidebar a{
-    color:yellow;
+
+#sidebar a {
+    color: yellow;
 }
 
 
 /* Media Queries */
+
 @media (max-width: 900px) {
-  nav ul {
-    display: none;
-  }
-
-  #menu-icon {
-    display: flex;
-  }
-
-  #slideout-menu {
-    display: block;
-  }
-
-  #searchbox {
-    display: none;
-  }
-
-  #blogpost{
-    width:100%;
-    border-left:0;
-  }
-
-  #sidebar{
-    display: none;
-  }
+    nav ul {
+        display: none;
+    }
+    #menu-icon {
+        display: flex;
+    }
+    #slideout-menu {
+        display: block;
+    }
+    #searchbox {
+        display: none;
+    }
+    #blogpost {
+        width: 100%;
+        border-left: 0;
+    }
+    #sidebar {
+        display: none;
+    }
 }
 
 @media (max-width: 719px) {
-  main {
-    width: 95%;
-  }
-
-  section {
-    flex-direction: column;
-  }
-
-  .cards,
-  .cards .cards-image img {
-    width: 100%;
-  }
-   footer {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  footer #left-footer {
-    flex: 1;
-    border-right: 0;
-    padding-left: 0;
-  }
-
-  footer #right-footer {
-    background: #eee;
-    color: black;
-  }
-
-  footer #right-footer a {
-    color: black;
-  }
-
-  footer #social-media-footer a .fa-facebook,
-  footer #social-media-footer a .fa-youtube,
-  footer #social-media-footer a .fa-github {
-    color: black;
-    transition: 0.4s;
-  }
+    main {
+        width: 95%;
+    }
+    section {
+        flex-direction: column;
+    }
+    .cards,
+    .cards .cards-image img {
+        width: 100%;
+    }
+    footer {
+        flex-direction: column;
+        text-align: center;
+    }
+    footer #left-footer {
+        flex: 1;
+        border-right: 0;
+        padding-left: 0;
+    }
+    footer #right-footer {
+        background: #eee;
+        color: black;
+    }
+    footer #right-footer a {
+        color: black;
+    }
+    footer #social-media-footer a .fa-facebook,
+    footer #social-media-footer a .fa-youtube,
+    footer #social-media-footer a .fa-github {
+        color: black;
+        transition: 0.4s;
+    }
 }
 
 @media (max-width: 600px) {
-  main {
-    width: 100%;
-  }
-
-  h1 {
-    font-size: 48px;
-  }
-
-  #banner h3 {
-    font-size: 20px;
-  }
-
-  .cards {
-    text-align: center;
-  }
-
-  #logo-img {
-    padding: 0;
-  }
+    main {
+        width: 100%;
+    }
+    h1 {
+        font-size: 48px;
+    }
+    #banner h3 {
+        font-size: 20px;
+    }
+    .cards {
+        text-align: center;
+    }
+    #logo-img {
+        padding: 0;
+    }
 }
 
 @media (min-width: 720px) {
-  main {
-    width: 95%;
-  }
-  .cards {
-    width: 45%;
-  }
-  .cards .cards-image img {
-    width: 100%;
-  }
+    main {
+        width: 95%;
+    }
+    .cards {
+        width: 100%;
+    }
+    .cards .cards-image img {
+        width: 100%;
+    }
 }
 
 @media (min-width: 1200px) {
-  main {
-    width: 85%;
-  }
+    main {
+        width: 85%;
+    }
 }
